Gráfica con datos añadida

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h2><b>Chuck Norris Jokes</b></h2>
     <button id="btnJoke" class="btnJoke" type="submit">Obtain joke</button>
     <div id="listJokes" class="listJokes"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <canvas id="myCanvas"></canvas>
+    
     <script src="script.js"></script>
 </body>
 </html>
