--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2><b>Chuck Norris Jokes</b></h2>
-    <button id="btnJoke" class="btnJoke" type="submit">Obtain joke</button>
-    <div id="listJokes" class="listJokes"></div>
+    <main class="main-container">
+        <h2><b>Chuck Norris Jokes</b></h2>
+        <button id="btnJoke" class="btnJoke" type="submit">Obtain joke</button>
+        <div id="listJokes" class="listJokes"></div>
+        <br>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <canvas id="myCanvas"></canvas>
-    
-    <script src="script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <canvas id="myCanvas"></canvas>
+        
+        <script src="script.js"></script>
+    </main>
 </body>
 </html>
